Testeado método getPostByTag y addTag