@@ -1,11 +1,17 @@
 package com.sopromadze.blogapi.service.impl;
 
 import com.sopromadze.blogapi.exception.ResourceNotFoundException;
+import com.sopromadze.blogapi.model.Category;
 import com.sopromadze.blogapi.model.Post;
 import com.sopromadze.blogapi.model.Tag;
+import com.sopromadze.blogapi.model.role.RoleName;
 import com.sopromadze.blogapi.payload.PagedResponse;
+import com.sopromadze.blogapi.payload.PostRequest;
+import com.sopromadze.blogapi.repository.CategoryRepository;
 import com.sopromadze.blogapi.repository.PostRepository;
 import com.sopromadze.blogapi.repository.TagRepository;
+import com.sopromadze.blogapi.repository.UserRepository;
+import com.sopromadze.blogapi.security.UserPrincipal;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -17,11 +23,10 @@ import static org.mockito.Mockito.*;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.*;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.parameters.P;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -33,6 +38,12 @@ class PostServiceImplTest {
 
     @Mock
     TagRepository tagRepository;
+
+    @Mock
+    UserRepository userRepository;
+
+    @Mock
+    CategoryRepository categoryRepository;
 
     @InjectMocks
     PostServiceImpl postService;
@@ -55,7 +66,6 @@ class PostServiceImplTest {
 
         when(postRepository.findAll(pageable)).thenReturn(posts);
         assertEquals(paginas, postService.getAllPosts(1, 1));
-
     }
 
     @Test
@@ -71,25 +81,17 @@ class PostServiceImplTest {
         tag1.setId(1L);
         tag1.setName("Tag de testeo n1");
 
-        Tag tag2 = new Tag();
-        tag2.setId(2L);
-        tag2.setName("Tag de testeo n2");
-
-        when(tagRepository.findAll()).thenReturn(List.of(tag1, tag2));
+        when(tagRepository.findById(1L)).thenReturn(Optional.of(tag1));
 
         Post p1 = new Post();
         p1.setId(1L);
         p1.setTitle("Post de prueba con tags n1");
         p1.setTags(List.of(tag1));
 
-        Post p2 = new Post();
-        p2.setId(1L);
-        p2.setTitle("Post de prueba con tags n2");
-        p2.setTags(List.of(tag2));
+        Pageable pageable = PageRequest.of(1, 1, Sort.Direction.DESC, CREATED_AT);
 
-        Pageable pageable = PageRequest.of(1, 1, Sort.Direction.DESC, CREATED_AT);;
-
-        Page<Post> postList = new PageImpl<>(List.of(p1, p2));
+        Page<Post> postList = new PageImpl<>(List.of(p1));
+        when(postRepository.findByTagsIn(Collections.singletonList(tag1), pageable)).thenReturn(postList);
 
         PagedResponse<Post> pagedPostList = new PagedResponse<>();
         pagedPostList.setLast(true);
@@ -98,9 +100,41 @@ class PostServiceImplTest {
         pagedPostList.setSize(1);
         pagedPostList.setTotalElements(1);
 
-        when(postRepository.findAll(pageable)).thenReturn(postList);
         assertEquals(pagedPostList, postService.getPostsByTag(1L, 1, 1));
+    }
 
+    @Test
+    void addPost_givenNonExistUser_shouldReturnResourceNotFoundException() {
+        Category c = new Category();
+        c.setId(1L);
+        c.setName("cat1");
+
+        PostRequest pr = new PostRequest();
+        pr.setTitle("Esto es un post de testeo");
+        pr.setBody("Probando a hacer un post para ejecutar un test que debe lanzar una excepcion");
+        pr.setCategoryId(1L);
+
+        UserPrincipal up = new UserPrincipal(1L, "Nombre1", "Apellido1", "admin", "admin@gmail.com", "admin", List.of(new SimpleGrantedAuthority(RoleName.ROLE_ADMIN.toString())));
+
+        when(userRepository.findById(1L)).thenThrow(new ResourceNotFoundException("a", "b", 1L));
+        assertThrows(ResourceNotFoundException.class, () -> postService.addPost(pr, up));
+    }
+
+    @Test
+    void addPost_givenNonExistCategory_shouldReturnResourceNotFoundException() {
+        Category c = new Category();
+        c.setId(1L);
+        c.setName("cat1");
+
+        PostRequest pr = new PostRequest();
+        pr.setTitle("Esto es un post de testeo");
+        pr.setBody("Probando a hacer un post para ejecutar un test que debe lanzar una excepcion");
+        pr.setCategoryId(1L);
+
+        UserPrincipal up = new UserPrincipal(1L, "Nombre1", "Apellido1", "admin", "admin@gmail.com", "admin", List.of(new SimpleGrantedAuthority(RoleName.ROLE_ADMIN.toString())));
+
+        when(categoryRepository.findById(0L)).thenThrow(new ResourceNotFoundException("a", "b", 0L));
+        assertThrows(ResourceNotFoundException.class, () -> postService.addPost(pr, up));
     }
 
     @Test
